raksmey_fix logut loopping when user performing